# hexapod_assembly

./: LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bluetooth_first_try.cpp  hexapod.cpp  hexapod.h  hexapod_leg.cpp  hexapod_leg.h  hexapod_testing.cpp  i2c_first_try.c  i2c_first_try.cpp  mcpwm_servo_control_example_main.c  pca9685.c  pca9685.h  pca9685_handler.cpp  pca9685_handler.h  pca_testing.cpp
main/bluetooth/: bluetooth.cpp  bluetooth.h  bt_nimble.cpp  bt_nimble.h  gatt_svr.cpp  gatt_svrc.h  misc.cpp  misc.h
main/bluetooth/bluetooth/: Bluetooth.cpp
main/bluetooth/bluetooth/include/: Bluetooth.hpp  measurements.hpp
main/bluetooth/utils/: BLE2902.cpp  BLEAddress.cpp  BLEAdvertisedDevice.cpp  BLEAdvertising.cpp  BLECharacteristic.cpp  BLECharacteristicMap.cpp  BLEClient.cpp  BLEDescriptor.cpp  BLEDescriptorMap.cpp  BLEDevice.cpp  BLEExceptions.cpp  BLERemoteCharacteristic.cpp  BLERemoteDescriptor.cpp  BLERemoteService.cpp  BLEScan.cpp  BLESecurity.cpp  BLEServer.cpp  BLEService.cpp  BLEServiceMap.cpp  BLEUUID.cpp  BLEUtils.cpp  BLEValue.cpp  FreeRTOSInterface.cpp  GeneralUtils.cpp
main/bluetooth/utils/include/: BLE2902.hpp  BLEAddress.hpp  BLEAdvertisedDevice.hpp  BLEAdvertising.hpp  BLECharacteristic.hpp  BLEClient.hpp  BLEDescriptor.hpp  BLEDevice.hpp  BLERemoteCharacteristic.hpp  BLERemoteDescriptor.hpp  BLERemoteService.hpp  BLEScan.hpp  BLESecurity.hpp  BLEServer.hpp  BLEService.hpp  BLEUUID.hpp  BLEUtils.hpp  BLEValue.hpp  FreeRTOSInterface.hpp
